--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --silent --detectOpenHandles",
+    "test:user": "MODE=T --verbose --silent --detectOpenHandles ./test/user.test.ts",
+    "test:staff": "MODE=T jest --verbose --silent --detectOpenHandles ./test/staff.test.ts",
     "build": "tsc",
-    "start:dev": "nodemon ./src/index.ts",
+    "start:dev": "MODE=D nodemon ./src/index.ts",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
