<feat>[patient] create patient

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:user": "MODE=T --verbose --silent --detectOpenHandles ./test/user.test.ts",
     "test:staff": "MODE=T jest --verbose --silent --detectOpenHandles ./test/staff.test.ts",
     "test:doctor": "MODE=T jest --verbose --silent --detectOpenHandles ./test/doctor.test.ts",
+    "test:patient": "MODE=T jest --verbose --silent --detectOpenHandles ./test/patient.test.ts",
     "build": "tsc",
     "start:dev": "MODE=D nodemon ./src/index.ts",
     "start": "node ./dist/index.js"
