--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:staff": "MODE=T jest --verbose --silent --detectOpenHandles ./test/staff.test.ts",
     "test:doctor": "MODE=T jest --verbose --silent --detectOpenHandles ./test/doctor.test.ts",
     "test:patient": "MODE=T jest --verbose --silent --detectOpenHandles ./test/patient.test.ts",
+    "test:appointment": "MODE=T jest --verbose --silent --detectOpenHandles ./test/appointment.test.ts",
     "build": "tsc",
     "start:dev": "MODE=D nodemon ./src/index.ts",
     "start": "node ./dist/index.js"
